--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion '25.0.0'
     useLibrary  'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.oil.vivek.oilmillcalc"
@@ -28,7 +28,7 @@ dependencies {
     compile 'com.google.firebase:firebase-messaging:10.0.1'
     compile 'com.google.android.gms:play-services:10.0.1'
     compile 'com.google.firebase:firebase-crash:10.0.1'
-    compile files('/Users/vivek.vikani/oilmillcalc/libs/okhttp-2.4.0.jar')
-    compile files('/Users/vivek.vikani/oilmillcalc/libs/okio-1.4.0.jar')
+    compile files('C:/Users/Vivek/AndroidStudioProjects/OilMillCalculator/libs/okhttp-2.4.0.jar')
+    compile files('C:/Users/Vivek/AndroidStudioProjects/OilMillCalculator/libs/okio-1.4.0.jar')
 }
 apply plugin: 'com.google.gms.google-services'
