--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     compile 'com.google.firebase:firebase-messaging:10.0.1'
     compile 'com.google.android.gms:play-services:10.0.1'
     compile 'com.google.firebase:firebase-crash:10.0.1'
-    compile files('C:/Users/Vivek/AndroidStudioProjects/OilMillCalculator/libs/okhttp-2.4.0.jar')
-    compile files('C:/Users/Vivek/AndroidStudioProjects/OilMillCalculator/libs/okio-1.4.0.jar')
+    compile files('/Users/vivek.vikani/oilmillcalc/libs/okhttp-2.4.0.jar')
+    compile files('/Users/vivek.vikani/oilmillcalc/libs/okio-1.4.0.jar')
 }
 apply plugin: 'com.google.gms.google-services'
