--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     compile 'com.google.firebase:firebase-core:10.0.1'
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.google.firebase:firebase-messaging:10.0.1'
-    compile 'com.google.android.gms:play-services:10.0.1'
+    compile 'com.google.android.gms:play-services-base:10.0.1'
     compile 'com.google.firebase:firebase-crash:10.0.1'
     compile files('/Users/vivek.vikani/oilmillcalc/libs/okhttp-2.4.0.jar')
     compile files('/Users/vivek.vikani/oilmillcalc/libs/okio-1.4.0.jar')
