--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 25
     buildToolsVersion '25.0.0'
     useLibrary  'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.oil.vivek.oilmillcalc"
         minSdkVersion 14
-        targetSdkVersion 21
-        versionCode 3
-        versionName "1.2"
+        targetSdkVersion 25
+        versionCode 5
+        versionName "2.2"
     }
     buildTypes {
         release {
@@ -21,14 +21,15 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.parse:parse-android:1.11.0'
+    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:support-v4:25.1.0'
+    compile 'com.android.support:design:25.1.0'
     compile 'com.google.firebase:firebase-core:10.0.1'
-    compile 'com.google.code.gson:gson:2.4'
+    compile 'com.google.code.gson:gson:2.7'
     compile 'com.google.firebase:firebase-messaging:10.0.1'
     compile 'com.google.android.gms:play-services-base:10.0.1'
     compile 'com.google.firebase:firebase-crash:10.0.1'
-    compile files('/Users/vivek.vikani/oilmillcalc/libs/okhttp-2.4.0.jar')
-    compile files('/Users/vivek.vikani/oilmillcalc/libs/okio-1.4.0.jar')
+    compile files('libs/okhttp-2.4.0.jar')
+    compile files('libs/okio-1.4.0.jar')
 }
 apply plugin: 'com.google.gms.google-services'
