--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,11 +18,11 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".aboutUs"
             android:label="@string/title_activity_about_us"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".launcher_helper"
             android:screenOrientation="portrait">
@@ -34,7 +34,7 @@
         </activity>
         <activity
             android:name=".authentication"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
 
         <service android:name=".firebase.MyFirebaseMessagingService">
             <intent-filter>
@@ -47,6 +47,7 @@
             </intent-filter>
         </service>
 
+        <activity android:name=".notificationPage"></activity>
     </application>
 
 </manifest>
