--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/ic_launcher" />
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -21,7 +25,17 @@
         <activity
             android:name=".aboutUs"
             android:label="@string/title_activity_about_us"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".notification_screen"
+            android:label="@string/action_notification"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoTitleBar">
+            <intent-filter>
+                <action android:name="OPEN_NOTIFICATION" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".launcher_helper"
             android:screenOrientation="portrait">
@@ -45,8 +59,6 @@
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
-
-        <activity android:name=".notificationPage"></activity>
     </application>
 
 </manifest>
