--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         <activity
             android:name=".aboutUs"
             android:label="@string/title_activity_about_us"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize|stateHidden">
         </activity>
         <activity android:name=".notification_screen"
             android:label="@string/action_notification"
